working calendar recurrence functionality.  working "effective calendar" feature.  working "week at a glance" screen.